# cerne

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
cerne/: __main__.py  app.py
cerne/core/: model.py  scanner.py
cerne/managers/: __init__.py  base.py  go.py  javascript.py  python.py  ruby.py  rust.py
tests/managers/: test_go_manager.py  test_javascript_manager.py  test_python_manager.py  test_ruby_manager.py
