[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cerne"
version = "0.1.0"
description = "A visualizer for dependency trees and vulnerabilities (SCA) in the terminal."
readme = "README.md"
authors = [
  { name = "Seu Nome", email = "seu.email@exemplo.com" },
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"

dependencies = [
    "textual>=0.40.0",
    "requests>=2.32.5",
    "tomli>=2.0.1; python_version < '3.11'"
]

[project.urls]
"Homepage" = "https://github.com/JAugusto42/cerne"
"Bug Tracker" = "https://github.com/JAugusto42/cerne/issues"

[project.scripts]
cerne = "cerne.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cerne*"]
