[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cerne"
dynamic = ["version"]
description = "A visualizer for dependency trees and vulnerabilities (SCA) in the terminal."
readme = "README.md"
authors = [
  { name = "Jose Augusto", email = "joseaugusto.881@outlook.com" },
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"

dependencies = [
    "textual>=0.40.0",
    "requests>=2.32.5",
    "tomli>=2.0.1; python_version < '3.11'"
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/JAugusto42/cerne"
"Bug Tracker" = "https://github.com/JAugusto42/cerne/issues"

[project.scripts]
cerne = "cerne.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cerne*"]

[tool.setuptools.dynamic]
version = {attr = "cerne.__version__.__version__"}
